Fix the routing for preview edit with article id

--- a/projects/hermes-editor/src/app/auth/containers/profile/profile.component.html
+++ b/projects/hermes-editor/src/app/auth/containers/profile/profile.component.html
@@ -1,3 +1,4 @@
+<p class="email center">Email: &lt;{{ user.authData.email }}&gt;</p>
 <mat-card class="profile">
   <ng-container *ngIf="editProfile; else profileBlock">
     <profile-update [profile]="editProfile"
