--- a/projects/hermes-editor/src/app/editor/components/article-detail/article-detail.component.html
+++ b/projects/hermes-editor/src/app/editor/components/article-detail/article-detail.component.html
@@ -19,7 +19,7 @@
   </div>
   <p class="article-source">
     Dẫn nguồn từ
-    <span>{{ article.reference | titlecase }}</span> -
+    <span>{{ article.reference | titlecase }}</span> &copy;
     <span>{{ article.publisher | titlecase }}</span>
   </p>
   <div class="article-creator-detail">
