--- a/projects/hermes-editor/src/app/editor/containers/articles-list/articles-list.component.html
+++ b/projects/hermes-editor/src/app/editor/containers/articles-list/articles-list.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container list-container">
   <form [formGroup]="form">
     <date-time-picker [dateNumber]="queryDate"
       (onChange)="setFromDate($event)"></date-time-picker>
@@ -44,7 +44,7 @@
         </button>
       </mat-list-item>
       <mat-paginator [length]="articlesList.length"
-        [pageSize]="20"
+        [pageSize]="pageSize"
         (page)="handlePageChange($event)"
         hidePageSize></mat-paginator>
     </mat-list>
