--- a/projects/hermes-editor/src/app/editor/containers/edit/edit.component.html
+++ b/projects/hermes-editor/src/app/editor/containers/edit/edit.component.html
@@ -1,9 +1,15 @@
-<ng-container *ngIf="!loading; else loadingBlock">
-  <article-form [creatorId]="user.authData.id"
-    [profile]="user.profile"
-    [article]="article"
-    (onSubmit)="handleEdit($event)"></article-form>
-</ng-container>
+<div class="container">
+  <p *ngIf="articles.error$ | async as error"
+    class="center error">
+    Lỗi hệ thống. Vui lòng báo admin nội dung sau: {{ error | json }}
+  </p>
+  <ng-container *ngIf="!(articles.loading$ | async); else loadingBlock">
+    <article-form [creatorId]="user.authData.id"
+      [profile]="user.profile"
+      [article]="article$ | async"
+      (onSubmit)="handleUpdate($event)"></article-form>
+  </ng-container>
+</div>
 
 <ng-template #loadingBlock>
   <mat-spinner color="accent"
