Rework the editor to new articles structure

--- a/projects/hermes-editor/src/app/editor/components/article-detail/article-detail.component.html
+++ b/projects/hermes-editor/src/app/editor/components/article-detail/article-detail.component.html
@@ -15,7 +15,7 @@
   <div class="article-body ql-editor"
     [class.article-style]="article.style === 'article'"
     [class.picture-style]="article.style === 'picture'"
-    [innerHtml]="article.body">
+    [innerHtml]="body$ | async">
   </div>
   <p class="article-source">
     Dẫn nguồn từ
