--- a/projects/hermes-editor/src/app/editor/components/article-form/article-form.component.html
+++ b/projects/hermes-editor/src/app/editor/components/article-form/article-form.component.html
@@ -121,7 +121,7 @@
         </div>
         <quill-editor #quillEditor
           placeholder="Nội dung bài viết"
-          formControlName="body"
+          formControlName="bodyData"
           [style]="{ height: '80vh' }"
           [formats]="quillFormats"
           [modules]="quillModules">
