--- a/projects/hermes-editor/src/app/editor/containers/create/create.component.html
+++ b/projects/hermes-editor/src/app/editor/containers/create/create.component.html
@@ -3,15 +3,5 @@
     class="center error">
     Lỗi hệ thống. Vui lòng báo admin nội dung sau: {{ error | json }}
   </p>
-  <ng-container *ngIf="!(articles.loading$ | async); else loadingBlock">
-    <article-form [creatorId]="user.authData.id"
-      [profile]="user.profile"
-      (onSubmit)="handleCreate($event)"></article-form>
-  </ng-container>
+  <article-form (onSubmit)="handleCreate($event)"></article-form>
 </div>
-
-<ng-template #loadingBlock>
-  <mat-spinner color="accent"
-    diameter="30"
-    strokeWidth="2"></mat-spinner>
-</ng-template>
