--- a/projects/hermes/src/styles.scss
+++ b/projects/hermes/src/styles.scss
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500|Play|Francois+One|Merriweather");
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: Play, "Courier New", Courier, monospace;
+}
