smooth scrolling. implement cache. scroll to clear article.

--- a/projects/hermes-editor/src/app/editor/containers/create/create.component.html
+++ b/projects/hermes-editor/src/app/editor/containers/create/create.component.html
@@ -3,5 +3,11 @@
     class="center error">
     Lỗi hệ thống. Vui lòng báo admin nội dung sau: {{ error | json }}
   </p>
-  <article-form (onSubmit)="handleCreate($event)"></article-form>
+  <mat-spinner *ngIf="articles.loading$ | async"
+    color="accent"
+    diameter="30"
+    strokeWidth="2"></mat-spinner>
+  <article-form *ngIf="!(articles.loading$ | async)"
+    (onSubmit)="handleCreate($event)">
+  </article-form>
 </div>
