--- a/projects/hermes-editor/src/app/editor/containers/edit/edit.component.html
+++ b/projects/hermes-editor/src/app/editor/containers/edit/edit.component.html
@@ -3,14 +3,13 @@
     class="center error">
     Lỗi hệ thống. Vui lòng báo admin nội dung sau: {{ error | json }}
   </p>
-  <ng-container *ngIf="article$ | async as article; else loadingBlock">
-    <article-form [article]="article"
+  <mat-spinner *ngIf="articles.loading$ | async"
+    color="accent"
+    diameter="30"
+    strokeWidth="2"></mat-spinner>
+  <ng-container *ngIf="article$ | async as article">
+    <article-form *ngIf="!(articles.loading$ | async)"
+      [article]="article"
       (onSubmit)="handleUpdate($event)"></article-form>
   </ng-container>
 </div>
-
-<ng-template #loadingBlock>
-  <mat-spinner color="accent"
-    diameter="30"
-    strokeWidth="2"></mat-spinner>
-</ng-template>
