--- a/projects/hermes/src/app/app.component.html
+++ b/projects/hermes/src/app/app.component.html
@@ -1,17 +1,24 @@
-<div class="container"
-  (scroll)="scrollHandler($event)">
-  <div class="head">
-    <img class="logo"
+<div (scroll)="scrollHandler($event)"
+  class="container">
+  <header #head>
+    <img (click)="articles.clearCacheReload()"
+      class="logo"
       src="assets/logo.png"
       alt="logo">
+  </header>
+  <div *ngIf="articles.loading$ | async"
+    class="top-loading-bar progress">
+    <div class="indeterminate"></div>
   </div>
-  <div class="nav-spacer"
-    [style.display]="fixedMenu ? 'block' : 'none'"></div>
+  <div *ngIf="fixedMenu"
+    class="nav-spacer"></div>
   <nav [class.fixed]="fixedMenu">
-    <ul #navList>
-      <li *ngFor="let category of categories"
-        [class.selected]="category.id == 'selected'"
-        (click)="liClicked(category)">
+    <ul>
+      <li routerLink="/home"
+        [class.selected]="!selectedCategory">Trang Chủ</li>
+      <li *ngFor="let category of categories; let i = index"
+        [class.selected]="selectedCategory && selectedCategory.position == i"
+        [routerLink]="category.link">
         {{ category.name | titlecase }}
       </li>
     </ul>
