--- a/projects/hermes/src/app/components/articles-grid-top/articles-grid-top.component.scss
+++ b/projects/hermes/src/app/components/articles-grid-top/articles-grid-top.component.scss
@@ -1,65 +1,90 @@
-div.cover-image {
-  display: inline-block;
-  width: 30%;
-  height: 100%;
-  background-size: cover;
-  background-position-y: 23%;
-  clip-path: polygon(10% 0%, 100% 0%, 90% 100%, 0% 90%);
-}
-
-div.category {
-  position: absolute;
-  color: white;
-  padding: 0.2em 0.5em;
-  bottom: 0;
-  left: 0.2rem;
-  font-style: italic;
-  clip-path: polygon(2.5% 0%, 100% 0%, 96.3% 100%, 0% 100%);
-}
-
-.cat-1 {
-  background: var(--red-preset);
-}
-
-.cat-2 {
-  background: var(--blue-preset);
-}
-
-p {
-  display: inline-block;
-  position: absolute;
-}
-
-p.title {
-  top: 0;
-  left: calc(30% + 1rem);
-  font-size: 1.2rem;
-  font-family: Roboto;
-  font-weight: 500;
-}
-
-span.publish-at {
-  color: rgba(0, 0, 0, 0.49);
-  font-size: 0.9rem;
-  font-weight: normal;
-  padding: 0;
-}
-
 ul {
   list-style: none;
   li {
+    display: grid;
+    grid-template-columns: 30% auto;
     position: relative;
     margin-bottom: 1rem;
+    padding: 0 1rem;
     height: calc(100vw * 0.23);
     max-height: 150px;
   }
 }
 
-@media (max-width: 500px) {
-  p.title {
-    font-size: 1rem;
+div.cover-image {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position-y: 23%;
+}
+
+p.category {
+  position: absolute;
+  color: white;
+  padding: 0.2em 0.5em;
+  bottom: 0;
+  left: 0.6rem;
+  bottom: 0.5rem;
+}
+
+p.cat-3WYMgrmpfuLornXzAnnY {
+  background: var(--secondary-color);
+}
+
+p.cat-JfDm8uW3Bgt3GdHhmxnF {
+  background: #ff8800;
+}
+
+p.cat-RWTkmXHmJca6Zap12f87 {
+  background: var(--primary-color);
+}
+
+p.cat-iqs4rjIm4vsOsckd8ETf {
+  background: #00aa09;
+}
+
+div.info {
+  display: inline-block;
+  padding: 0 1rem;
+  p {
+    margin-bottom: 0.3rem;
   }
-  div.category {
+
+  p.title {
+    font-size: 1.2rem;
+    font-family: Roboto, sans-serif;
+    font-weight: 500;
+  }
+
+  p.sapo {
+    font-size: 0.9rem;
+    font-family: Roboto, sans-serif;
+    color: var(--text-secondary-color);
+  }
+
+  p.publish-at {
+    color: var(--text-faded-color);
+    font-size: 0.9rem;
+    font-weight: normal;
+    padding: 0;
+  }
+}
+
+@media (max-width: 599px) {
+  li {
+    padding: 0 0.5rem;
+  }
+  div.info {
+    p.title {
+      font-size: 1rem;
+    }
+    p.sapo {
+      display: none;
+    }
+  }
+  p.category {
     font-size: 0.8rem;
+    bottom: 0.2rem;
   }
 }
