--- a/projects/hermes-editor/src/assets/scss/quill.scss
+++ b/projects/hermes-editor/src/assets/scss/quill.scss
@@ -1,4 +1,6 @@
 .ql-editor {
+  max-width: 800px;
+  margin: auto;
   padding: 1rem 1.5rem;
   line-height: 1.3rem;
   font-size: 0.9rem;
@@ -6,14 +8,17 @@
   text-align: justify;
   h2 {
     font-family: "Merriweather", serif;
-    margin-top: 2rem;
     font-weight: bold;
-    grid-column: 1 / -1;
+    line-height: 2rem;
+    font-size: 1.3rem;
+  }
+  p, h2 {
+    margin-bottom: 1rem;
   }
   blockquote {
     font-style: italic;
     display: grid;
-    border-left: solid 2px #3f51b5;
+    border-left: solid 2px var(--primary-color-tint);
     padding: 0 1rem;
     margin: 0 0 12px;
     align-self: center;
@@ -21,12 +26,13 @@
   }
   img {
     width: calc(100% + 3rem);
-    margin: 24px -24px;
+    margin: 0 -24px;
   }
   .ql-align-center {
     padding-bottom: 1rem;
-    border-bottom: solid 1px #ff4081;
+    border-bottom: solid 1px var(--primary-color);
     font-style: italic;
+    max-width: 600px;
   }
   .ql-align-right {
     text-align: left;
@@ -38,6 +44,7 @@
   ul {
     padding: 0;
     margin: 0;
+    list-style: none;
     li {
       padding: 0 !important;
       margin: 0 0 12px;
@@ -46,20 +53,17 @@
 }
 
 .picture-style {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   @media (min-width: 600px) {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 1rem;
     img {
+      display: block;
       width: 100%;
-      margin: 0;
-      grid-column: 1 / -1;
-      grid-row: 1 / -1;
+      max-width: 600px;
+      padding-bottom: 1rem;
+      margin: 0 auto;
       object-fit: cover;
-    }
-    .ql-align-right {
-      grid-column: 1 / -1;
-      padding: 0 1rem;
     }
   }
 }
