--- a/projects/hermes/src/app/components/article-detail/article-detail.component.html
+++ b/projects/hermes/src/app/components/article-detail/article-detail.component.html
@@ -1,6 +1,5 @@
-<div *ngIf="meta && body"
-  class="overlay"
-  (scroll)="scrollHandler($event)">
+<div *ngIf="meta$ | async as meta"
+  [@showAnimation]>
   <div class="article-container">
     <h1 class="article-title">
       {{ meta.title }}
@@ -15,7 +14,8 @@
         class="center youtube">
       </div>
     </div>
-    <div class="article-body ql-editor"
+    <div *ngIf="body$ | async as body"
+      class="article-body ql-editor"
       [class.article-style]="meta.style === 'article'"
       [class.picture-style]="meta.style === 'picture'"
       [innerHtml]="body.body">
@@ -25,16 +25,5 @@
       <span>{{ meta.reference | titlecase }}</span> &copy;
       <span>{{ meta.publisher | titlecase }}</span>
     </p>
-    <div class="article-creator-detail">
-      <div class="article-creator-name">Bài được đăng bởi
-        <strong>{{ meta.creatorName }}</strong>
-      </div>
-      <div class="article-creator-avatar"
-        [ngStyle]="{ 'background-image': 'url(' + meta.creatorAvatar + ')' }">
-      </div>
-      <div class="article-publish-at">
-        {{ meta.publishAt | date: "dd/MM/yy HH:mm" }}
-      </div>
-    </div>
   </div>
 </div>
