--- a/projects/hermes/src/app/components/article-detail/article-detail.component.scss
+++ b/projects/hermes/src/app/components/article-detail/article-detail.component.scss
@@ -1,21 +1,18 @@
-.overlay {
-  position: fixed;
-  display: block;
-  background: white;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  overflow: auto;
-  z-index: 1;
-  padding: 3rem 0 70vh;
-}
+@import "~projects/hermes-editor/src/assets/scss/quill.scss";
 
 .article-container {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+  background: white;
   margin: auto;
-  max-width: 960px;
+  padding: 3.5rem 0;
+  max-width: var(--container-width);
+  // display: flex;
+  // flex-direction: column;
 }
 
 h1.article-title {
@@ -34,6 +31,18 @@ p.article-sapo {
   font-family: "Merriweather", serif;
   text-align: justify;
   font-style: italic;
+}
+
+hr {
+  border: 0;
+  height: 1px;
+  background: var(--secondary-color);
+  background-image: linear-gradient(
+    to right,
+    var(--primary-color-tint),
+    var(--primary-color),
+    var(--primary-color-tint)
+  );
 }
 
 .article-body {
