--- a/projects/hermes/src/app/components/articles-grid-top/articles-grid-top.component.html
+++ b/projects/hermes/src/app/components/articles-grid-top/articles-grid-top.component.html
@@ -1,19 +1,24 @@
-<ul>
-  <li *ngFor="let article of list; let i = index"
-    (click)="articles.selectArticle(article)">
+<ul [@listState]="layout.showArticle ? 'hide' : 'show'">
+  <li *ngFor="let article of list"
+    (click)="select(article)">
     <div class="cover-image"
       [ngStyle]="{ 'background-image': 'url(' + article.coverImg + ')'}">
+      <p *ngIf="(articles.selectedCat$ | async)?.id == 'HomeCategoriesId'"
+        [class]="'category cat-' + article.categoryId">
+        {{ article.categoryName }}
+      </p>
     </div>
-    <div [class]="article.categoryId == 'RWTkmXHmJca6Zap12f87' ? 'category cat-1' : 'category cat-2'">
-      {{ article.categoryName }}
+    <div class="info">
+      <p class="title">
+        {{ article.title | trimText:titleMax }}
+      </p>
+      <p class="publish-at">
+        {{ article.publishAt | publishAtParser }}
+        <span *ngIf="article.video">🎬</span>
+      </p>
+      <p class="sapo">
+        {{ article.sapo | trimText:sapoMax }}
+      </p>
     </div>
-    <p class="title">
-      {{ article.title }}
-      <br/>
-      <span class="publish-at">
-        // {{ article.publishAt | publishAtParser }}
-      </span>
-      <span *ngIf="article.video">🎬</span>
-    </p>
   </li>
 </ul>
