--- a/projects/hermes/src/styles.scss
+++ b/projects/hermes/src/styles.scss
@@ -1,10 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500|Play|Francois+One|Merriweather");
-@import "~projects/hermes-editor/src/assets/scss/quill.scss";
 
 :root {
-  --red-preset: #ed1d24;
-  --red-preset-tint: #ffdfe0;
-  --blue-preset: #159cd8;
+  --primary-color: #ed1d24;
+  --primary-color-tint: #ffdfe0;
+  --secondary-color: #159cd8;
+  --text-main-color: #000000;
+  --text-secondary-color: #575757;
+  --text-faded-color: #8a8a8a;
   --container-width: 900px;
 }
 
@@ -19,112 +21,4 @@
 
 body {
   font-family: Play, "Courier New", Courier, monospace;
-}
-
-/* Progress Bar */
-.progress {
-  position: relative;
-  height: 3px;
-  display: block;
-  width: 100%;
-  background-color: var(--red-preset-tint);
-  border-radius: 2px;
-  background-clip: padding-box;
-  overflow: hidden;
-  z-index: 2;
-}
-.progress .determinate {
-  position: absolute;
-  background-color: inherit;
-  top: 0;
-  bottom: 0;
-  background-color: var(--red-preset);
-  transition: width 0.3s linear;
-}
-.progress .indeterminate {
-  background-color: var(--red-preset);
-}
-.progress .indeterminate:before {
-  content: "";
-  position: absolute;
-  background-color: inherit;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  will-change: left, right;
-  -webkit-animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395)
-    infinite;
-  animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
-}
-.progress .indeterminate:after {
-  content: "";
-  position: absolute;
-  background-color: inherit;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  will-change: left, right;
-  -webkit-animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1)
-    infinite;
-  animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1)
-    infinite;
-  -webkit-animation-delay: 1.15s;
-  animation-delay: 1.15s;
-}
-
-@-webkit-keyframes indeterminate {
-  0% {
-    left: -35%;
-    right: 100%;
-  }
-  60% {
-    left: 100%;
-    right: -90%;
-  }
-  100% {
-    left: 100%;
-    right: -90%;
-  }
-}
-@keyframes indeterminate {
-  0% {
-    left: -35%;
-    right: 100%;
-  }
-  60% {
-    left: 100%;
-    right: -90%;
-  }
-  100% {
-    left: 100%;
-    right: -90%;
-  }
-}
-@-webkit-keyframes indeterminate-short {
-  0% {
-    left: -200%;
-    right: 100%;
-  }
-  60% {
-    left: 107%;
-    right: -8%;
-  }
-  100% {
-    left: 107%;
-    right: -8%;
-  }
-}
-@keyframes indeterminate-short {
-  0% {
-    left: -200%;
-    right: 100%;
-  }
-  60% {
-    left: 107%;
-    right: -8%;
-  }
-  100% {
-    left: 107%;
-    right: -8%;
-  }
 }
