Bug Fix the article detail

--- a/projects/hermes/src/app/components/article-detail/article-detail.component.html
+++ b/projects/hermes/src/app/components/article-detail/article-detail.component.html
@@ -1,5 +1,4 @@
-<div *ngIf="meta$ | async as meta"
-  [@showAnimation]>
+<div *ngIf="meta$ | async as meta">
   <div class="article-container">
     <h1 class="article-title">
       {{ meta.title }}
