--- a/projects/hermes-editor/src/app/editor/components/article-detail/article-detail.component.scss
+++ b/projects/hermes-editor/src/app/editor/components/article-detail/article-detail.component.scss
@@ -1,13 +1,11 @@
 .article-container {
-  position: fixed;
+  position: absolute;
   top: 0;
-  width: 100%;
-  height: 100vh;
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
+  left: 0;
+  right: 0;
   background: white;
   margin: auto;
-  padding: 3.5rem 0;
+  padding: 0 0 5rem;
   max-width: var(--container-width);
 }
 
