--- a/projects/hermes/src/app/components/article-detail/article-detail.component.scss
+++ b/projects/hermes/src/app/components/article-detail/article-detail.component.scss
@@ -1,18 +1,14 @@
-@import "~projects/hermes-editor/src/assets/scss/quill.scss";
-
 .article-container {
   position: fixed;
   top: 0;
   width: 100%;
   height: 100vh;
-  overflow-y: scroll;
+  overflow: scroll;
   -webkit-overflow-scrolling: touch;
   background: white;
   margin: auto;
-  padding: 3.5rem 0;
+  padding: 3rem 0 8rem;
   max-width: var(--container-width);
-  // display: flex;
-  // flex-direction: column;
 }
 
 h1.article-title {
@@ -49,6 +45,8 @@ hr {
   padding: 1rem 1.5rem;
   line-height: 1.8rem;
   font-size: 1.1rem;
+  overflow: visible;
+  height: auto;
 }
 
 .article-source {
