--- a/projects/hermes/src/styles.scss
+++ b/projects/hermes/src/styles.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500|Play|Francois+One|Merriweather");
+@import "~projects/hermes-editor/src/assets/scss/quill.scss";
 
 :root {
   --primary-color: #ed1d24;
