--- a/projects/hermes-editor/src/app/editor/components/article-detail/article-detail.component.scss
+++ b/projects/hermes-editor/src/app/editor/components/article-detail/article-detail.component.scss
@@ -1,11 +1,17 @@
+mat-form-field {
+  width: 100%;
+}
+
 .article-container {
-  position: absolute;
+  position: fixed;
   top: 0;
-  left: 0;
-  right: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
   background: white;
   margin: auto;
-  padding: 0 0 5rem;
+  padding: 3rem 0 8rem;
   max-width: var(--container-width);
 }
 
