--- a/projects/hermes-editor/src/app/editor/components/article-list-item/article-list-item.component.html
+++ b/projects/hermes-editor/src/app/editor/components/article-list-item/article-list-item.component.html
@@ -27,6 +27,7 @@
     class="note">
     <strong>Ghi chú: </strong>
     <em>&quot;{{ article.note }}&quot;</em>
+    <span *ngIf="article.managerName"> - {{ article.managerName }}</span>
   </p>
 </section>
 <mat-divider></mat-divider>
