--- a/projects/hermes/src/app/components/articles-grid/articles-grid.component.html
+++ b/projects/hermes/src/app/components/articles-grid/articles-grid.component.html
@@ -1,6 +1,5 @@
 <div class="container">
   <hm-articles-grid-top *ngIf="list$ | async as list"
-    [list]="list"
-    (selected)="select($event)"></hm-articles-grid-top>
+    [list]="list"></hm-articles-grid-top>
   <hm-article-detail></hm-article-detail>
 </div>
