Add tag function - phase 1

--- a/projects/hermes-editor/src/app/core/containers/app/app.component.html
+++ b/projects/hermes-editor/src/app/core/containers/app/app.component.html
@@ -6,6 +6,7 @@
     class="float-buttons">
     <button *ngFor="let button of buttonList"
       mat-button
+      [matTooltip]="button.text"
       [routerLink]="button.path">
       <mat-icon>{{ button.icon }}</mat-icon>
     </button>
