--- a/projects/hermes-editor/src/app/editor/components/article-detail/article-detail.component.scss
+++ b/projects/hermes-editor/src/app/editor/components/article-detail/article-detail.component.scss
@@ -18,10 +18,10 @@ mat-form-field {
 h1.article-title {
   margin-top: 1rem;
   padding: 0 1.5rem;
-  font-family: "Francois+One", sans-serif;
-  font-size: 2rem;
+  font-family: "Roboto", sans-serif;
+  font-size: 2.4rem;
   font-weight: bold;
-  line-height: 2.4rem;
+  line-height: 2.8rem;
 }
 
 p.article-sapo {
