--- a/projects/hermes/src/app/app.component.html
+++ b/projects/hermes/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div #container
+<div
   (scroll)="scrollHandler($event)"
   class="container">
+  <section #head></section>
   <hm-navbar-categories></hm-navbar-categories>
   <hm-loading-bar></hm-loading-bar>
   <router-outlet></router-outlet>
