--- a/projects/hermes/src/app/components/navbar-categories/navbar-categories.component.scss
+++ b/projects/hermes/src/app/components/navbar-categories/navbar-categories.component.scss
@@ -37,8 +37,7 @@ nav > ul {
   li {
     position: relative;
     padding: 0 2rem;
-    font-weight: bold;
-    font-size: 1.1rem;
+    font: bold 1.1rem Play;
     cursor: pointer;
   }
   li::after,
