--- a/projects/hermes-editor/src/app/editor/components/article-form/article-form.component.scss
+++ b/projects/hermes-editor/src/app/editor/components/article-form/article-form.component.scss
@@ -18,7 +18,7 @@ mat-form-field {
 .title {
   width: 100%;
   font-size: 1.1rem;
-  font-family: "Francois+One", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: bold;
 }
 
@@ -41,3 +41,10 @@ mat-form-field {
   width: 100%;
 }
 
+.publish-at {
+  p {
+    font-size: 0.65rem;
+    color: var(--text-faded-color);
+    margin: 0;
+  }
+}
