--- a/projects/hermes/src/styles.scss
+++ b/projects/hermes/src/styles.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500|Play|Francois+One|Merriweather");
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500|Play|Merriweather");
 @import "~projects/hermes-editor/src/assets/scss/quill.scss";
 
 :root {
@@ -6,6 +6,7 @@
   --primary-color-tint: #ffdfe0;
   --secondary-color: #159cd8;
   --text-main-color: #000000;
+  --text-accent-color: #ffffff;
   --text-secondary-color: #575757;
   --text-faded-color: #8a8a8a;
   --container-width: 900px;
@@ -21,7 +22,7 @@
 }
 
 body {
-  font-family: Play, "Courier New", Courier, monospace;
+  font-family: Roboto, "Courier New", Courier, monospace;
 }
 
 a {
