--- a/projects/hermes/src/app/tags/containers/tags/tags.component.html
+++ b/projects/hermes/src/app/tags/containers/tags/tags.component.html
@@ -1,9 +1,9 @@
 <div class="center padding-bot">
-  <button routerLinkActive="active-link"
-    mat-button
+  <button mat-button
+    routerLinkActive="active-link"
     routerLink="/tags/list">Danh sách tags</button>
-  <button routerLinkActive="active-link"
-    mat-button
+  <button mat-button
+    routerLinkActive="active-link"
     routerLink="/tags/search">Tìm theo Tag</button>
 </div>
 
