--- a/projects/hermes/src/assets/scss/quill.scss
+++ b/projects/hermes/src/assets/scss/quill.scss
@@ -54,7 +54,10 @@
 .picture-style {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
+  .ql-align-center {
+    margin: 0 auto 1rem;
+  }
   @media (min-width: 600px) {
     img {
       display: block;
@@ -84,3 +87,4 @@
     }
   }
 }
+
